--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
-flask
-python-dotenv
-openai
-aiohttp
-requests
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+sqlmodel==0.0.14
+asyncpg==0.29.0
+python-dotenv==1.0.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+celery==5.3.4
+redis==5.0.1
+httpx==0.25.2
+openai==1.35.3
+python-multipart==0.0.6
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+alembic==1.13.0
+greenlet==3.0.1
