--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     depends_on:
       - redis
       - db
+    command: /bin/sh -c "alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8080"
 
   worker:
     build: .
