--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,7 @@ pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 alembic==1.13.0
 greenlet==3.0.1
+psycopg2-binary==2.9.9
+aiosmtplib==2.0.2
+jinja2==3.1.2
+resend==0.6.0
