--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   web:
     build: .
@@ -8,25 +6,18 @@ services:
       - "${PORT:-8082}:8080"
     depends_on:
       - redis
-      - db
+    command: uvicorn src.main:app --host 0.0.0.0 --port 8080
 
   worker:
     build: .
     env_file: .env
     depends_on:
       - redis
-      - db
-    command: celery -A src.tasks worker --loglevel=info --concurrency=2
+    command: celery -A src.core.celery_app worker --loglevel=info --concurrency=2
 
   redis:
     image: redis:7-alpine
     volumes: ["redis_data:/data"]
 
-  db:
-    image: postgres:16-alpine
-    env_file: .env
-    volumes: ["pg_data:/var/lib/postgresql/data"]
-
 volumes:
   redis_data:
-  pg_data: 
