--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,10 @@ services:
     build: .
     env_file: .env
     ports:
-      - "${PORT:-8082}:8080"
+      - "8082:8080"  # Cambiado para coincidir con ngrok
     depends_on:
       - redis
       - db
-    command: /bin/sh -c "alembic upgrade head && uvicorn src.main:app --host 0.0.0.0 --port 8080"
 
   worker:
     build: .
@@ -17,7 +16,7 @@ services:
     depends_on:
       - redis
       - db
-    command: celery -A src.tasks worker --loglevel=info --concurrency=2
+    command: celery -A src.tasks worker --loglevel=info
 
   redis:
     image: redis:7-alpine
@@ -25,9 +24,16 @@ services:
 
   db:
     image: postgres:16-alpine
-    env_file: .env
-    volumes: ["pg_data:/var/lib/postgresql/data"]
+    environment:
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
 
 volumes:
   redis_data:
-  pg_data: 
+  pg_data:
+  postgres_data:
