--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
+fastapi==0.101.1
+uvicorn==0.23.2
 sqlmodel==0.0.14
-asyncpg==0.29.0
+asyncpg==0.28.0
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
@@ -15,3 +15,7 @@ pytest-asyncio==0.21.1
 pytest-cov==4.1.0
 alembic==1.13.0
 greenlet==3.0.1
+SQLAlchemy==2.0.19
+dnspython==2.4.1
+psycopg2-binary==2.9.7
+aiohttp==3.8.5
