--- a/railway.toml
+++ b/railway.toml
@@ -1,12 +1,21 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install -r requirements.txt"
+buildCommand = "pip install --upgrade pip && pip install -r requirements.txt && chmod +x start.sh"
 
 [deploy]
-startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "./start.sh"
+healthcheckPath = "/health"
+healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+
+[phases.setup]
+nixPkgs = ["python311", "postgresql", "curl"]
 
 [[env]]
 key = "DB_SSL_MODE"
 value = "require"
+
+[[env]]
+key = "PYTHONUNBUFFERED"
+value = "1"
