--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,36 @@
+# Web Framework
 fastapi==0.101.1
-uvicorn==0.23.2
+uvicorn[standard]==0.23.2
+
+# Database
 sqlmodel==0.0.14
 asyncpg==0.28.0
+psycopg2-binary==2.9.7
+SQLAlchemy==2.0.19
+alembic==1.13.0
+greenlet==3.0.1
+
+# Environment & Config
 python-dotenv==1.0.0
 pydantic==2.5.0
 pydantic-settings==2.1.0
+
+# Async & Network
+aiohttp==3.8.5
+httpx==0.25.2
+dnspython==2.4.1
+
+# Task Queue
 celery==5.3.4
 redis==5.0.1
-httpx==0.25.2
+
+# OpenAI
 openai==1.35.3
+
+# Multipart
 python-multipart==0.0.6
+
+# Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
 pytest-cov==4.1.0
-alembic==1.13.0
-greenlet==3.0.1
-SQLAlchemy==2.0.19
-dnspython==2.4.1
-psycopg2-binary==2.9.7
-aiohttp==3.8.5
