--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,14 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install --upgrade pip && pip install -r requirements.txt && chmod +x start.sh"
+buildCommand = """
+    pip install --upgrade pip && \
+    pip install -r requirements.txt && \
+    echo '#!/bin/bash' > start.sh && \
+    echo 'PORT="${PORT:-8000}"' >> start.sh && \
+    echo 'exec uvicorn main:app --host 0.0.0.0 --port "$PORT" --workers 4' >> start.sh && \
+    chmod +x start.sh && \
+    ls -la start.sh
+"""
 
 [deploy]
 startCommand = "./start.sh"
