--- a/railway.toml
+++ b/railway.toml
@@ -1,24 +1,16 @@
 [build]
 builder = "nixpacks"
-buildCommand = """
-    pip install --upgrade pip && \
-    pip install -r requirements.txt && \
-    echo '#!/bin/bash' > start.sh && \
-    echo 'PORT="${PORT:-8000}"' >> start.sh && \
-    echo 'exec uvicorn main:app --host 0.0.0.0 --port "$PORT" --workers 4' >> start.sh && \
-    chmod +x start.sh && \
-    ls -la start.sh
-"""
+buildCommand = "pip install --upgrade pip && pip install -r requirements.txt"
 
 [deploy]
-startCommand = "./start.sh"
+startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
 healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 
 [phases.setup]
-nixPkgs = ["python311", "postgresql", "curl"]
+nixPkgs = ["python311", "postgresql"]
 
 [[env]]
 key = "DB_SSL_MODE"
