--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,14 @@
 [build]
 builder = "nixpacks"
-buildCommand = "pip install --upgrade pip && pip install -r requirements.txt"
+buildCommand = """
+    pip install --upgrade pip && \
+    pip install -r requirements.txt && \
+    mkdir -p /app && \
+    cp -r . /app/
+"""
 
 [deploy]
-startCommand = "python main.py"
+startCommand = "cd /app && uvicorn main:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/health"
 healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
