--- a/railway.toml
+++ b/railway.toml
@@ -1,14 +1,9 @@
 [build]
 builder = "nixpacks"
-buildCommand = """
-    pip install --upgrade pip && \
-    pip install -r requirements.txt && \
-    mkdir -p /app && \
-    cp -r . /app/
-"""
+buildCommand = "pip install -r requirements.txt"
 
 [deploy]
-startCommand = "cd /app && uvicorn main:app --host 0.0.0.0 --port $PORT"
+startCommand = "uvicorn main:app --host 0.0.0.0 --port $PORT --workers 4"
 healthcheckPath = "/health"
 healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
@@ -16,6 +11,10 @@ restartPolicyMaxRetries = 10
 
 [phases.setup]
 nixPkgs = ["python311", "postgresql"]
+
+[[env]]
+key = "PYTHONPATH"
+value = "/app"
 
 [[env]]
 key = "DB_SSL_MODE"
