--- a/railway.toml
+++ b/railway.toml
@@ -1,13 +1,14 @@
 [build]
 builder = "nixpacks"
 buildCommand = """
-    pip install -r requirements.txt && \
-    pwd && \
-    ls -la
+    mkdir -p /app && \
+    cp -r . /app/ && \
+    cd /app && \
+    pip install -r requirements.txt
 """
 
 [deploy]
-startCommand = "python main.py"
+startCommand = "cd /app && python -m uvicorn main:app --host 0.0.0.0 --port=${PORT:-8000}"
 healthcheckPath = "/health"
 healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
