actualiza Procfile, railway.toml y main.py para usar la ruta correcta de la aplicación y añade un script de inicio alternativo para Railway

--- a/railway.toml
+++ b/railway.toml
@@ -1,14 +1,10 @@
 [build]
 builder = "nixpacks"
-buildCommand = """
-    mkdir -p /app && \
-    cp -r . /app/ && \
-    cd /app && \
-    pip install -r requirements.txt
-"""
 
 [deploy]
-startCommand = "cd /app && python -m uvicorn main:app --host 0.0.0.0 --port=${PORT:-8000}"
+startCommand = "uvicorn src.main:app --host 0.0.0.0 --port $PORT"
+# Si el comando de arriba falla, prueba este:
+# startCommand = "python start.py"
 healthcheckPath = "/health"
 healthcheckTimeout = 180
 restartPolicyType = "ON_FAILURE"
