--- a/railway.toml
+++ b/railway.toml
@@ -1,5 +1,4 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
 
 [deploy]
-startCommand = "uvicorn src.main:app --host 0.0.0.0 --port $PORT"
